# ingestion-pipeline

./: .gitignore  DEPLOY.md  Dockerfile  docker-compose.yml  package-lock.json  package.json  railway.json  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: __init__.py  annotations.py  calibration.py  conversations.py  evaluations.py  evaluators.py  health.py  suggestions.py
backend/src/db/: __init__.py  session.py
backend/src/evaluators/: __init__.py  base.py  coherence_evaluator.py  heuristic_evaluator.py  llm_judge_evaluator.py  tool_call_evaluator.py
backend/src/models/: __init__.py  annotation.py  base.py  calibration.py  conversation.py  evaluation.py  suggestion.py
backend/src/schemas/: __init__.py  conversation.py  evaluation.py  suggestion.py
backend/src/services/: __init__.py  annotation_service.py  batch_ingest_service.py  calibration_service.py  conversation_service.py  disagreement_resolver.py  evaluation_service.py  failure_clustering_service.py  suggestion_generator.py  suggestion_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
